# egui-notify

./: Cargo.toml
egui-notify/src/: lib.rs
example/src/: main.rs
examples/: all.rs
src/: lib.rs  toast.rs
