[package]
name = "egui-notify"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-notify"
description = "Simple notifications library for EGUI"
authors = ["ItsEthra"]
readme = "README.md"

[dependencies]
egui = "0.22.0"
egui-phosphor = "0.1.1"
crossbeam-channel = "0.5.8"

[dev-dependencies]
eframe = "0.22.0"
egui_extras = "0.22.0"
